config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config
  labels:
    group: istiodemo
    app: config
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: config
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: config-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        group: istiodemo
        app: config
        version: v1
    spec:
      containers:
      - name: config
        image: PIPELINE_REPLACE:latest
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
          requests:
            cpu: "300m"
            memory: "128Mi"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
